<resources>
    <string name="app_name">Reciclador</string>
    <string name="boton_Registraese1">Registrarse</string>
    <string name="title_SR">Socio Reciclador</string>
    <string name="nombre_usuario">Nombre de  Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="tvolvidaste">¿Olvidaste la Contraseña?</string>
    <string name="RegistroUsuario">Registro de Usuario</string>
    <string name="Callenum">Calle y Numeración</string>
    <string name="Teléfono">Teléfono</string>
    <string name="Comuna">Comuna</string>
    <string name="Constraseña">Contraseña</string>
    <string name="repeatpassword">Repetir Contraseña</string>
    <string name="repetirContraseña">Repetir Contraseña</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Crear">Crear</string>
    <string name="Login">Login</string>
    <string name="todo">TODO</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="recuperar_cuenta">Indica tu correo para poder enviar el código con el cual podrás recuperar tu cuenta.</string>
    <string name="recover_account">Recuperar Cuenta</string>
    <string name="enviar">Enviar</string>
    <string name="enter_code">Revisa tu correo e indique el código enviado. </string>
    <string name="verificar">Verificar</string>
    <string name="codigorecuperacion">Código de recuperación</string>
    <string name="newpassword">Crea una nueva contraseña</string>
    <string name="CrearSolicitudRecolección">Crear solicitud de recolección</string>
    <string name="FechaRecolección">Fecha de Recoleccion</string>
    <string name="HoraRecolección">Hora de Recoleccion</string>
    <string name="IngresoFecha">Ingrese la fecha</string>
    <string name="PesoTotal">Peso Total</string>
    <string name="VolumenTotal">Volumen Total</string>
    <string name="IngresePeso">Ingrese Peso</string>
    <string name="IngresevolumenTotal">Ingrese Volumen </string>
    <string name="Materiales">Materiales</string>
    <string name="SeccioneMaterial">Seleccione Material</string>
    <string name="SeleccioneCantidad">Indique Cantidad</string>
    <string name="TipoMaterial">Tipo de Material</string>
    <string name="IngreseTipo">Ingrese Tipo</string>
    <string name="Anotar">Anotar</string>
    <string name="Nombre">Nombre    :</string>
    <string name="Apellido">Apellido  :</string>
    <string name="Dirección">Dirección :</string>
    <string name="Sexo">Sexo      :</string>
    <string name="NumeroTe">Numero Teléfono : </string>
    <string name="Correo">Correo Electronico :</string>
    <string name="vacio">       </string>
    <string name="CentroAyuda">Centro de Ayuda</string>
    <string name="Icono">Icono</string>
    <string name="TitleCentroAyuda"> Hola ¿Como puedo ayudarte ?</string>
    <string name="txtayuda">Ingrese pregunta</string>
    <string name="Sugerencias">Preguntas comunes e informacion :</string>
    <string name="Home">Home</string>
    <string name="PerfilRecolector">Perfil Recolector</string>
    <string name="Numero_pedidos">Numero de pedidos termiandos:</string>
    <string name="Rut">Rut:</string>
    <string name="Ingresar">Ingresar</string>


    <string name="Linkedin"><a href="http://www.bla.com">Ir a linkedin</a></string>

</resources>