<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario">

    <ScrollView
        android:id="@+id/SV1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_color"
        app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/bg_color"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="147dp"
                    android:layout_height="34dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="66dp"
                    android:background="#0000"
                    android:text="@string/boton_Registraese1" />

                <TextView
                    android:id="@+id/textView4"
                    style="@android:style/Widget.TextView.SpinnerItem"
                    android:layout_width="240dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="33dp"
                    android:text="@string/title_SR"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="43dp"
                    android:autofillHints=""
                    android:background="@drawable/efect_et2"
                    android:ems="10"
                    android:hint="@string/nombre_usuario"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="33dp"
                    android:autofillHints=""
                    android:background="@drawable/efect_et2"
                    android:ems="10"
                    android:hint="@string/Contraseña"
                    android:inputType="textPassword"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="249dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="19dp"
                    android:background="#0000"
                    android:text="@string/tvolvidaste" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="55dp"
                    android:textColor="@color/colorNegro"
                    android:background="@drawable/bg_color2"
                    android:textStyle="bold"
                    android:hint="@string/Login"
                    />


            </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>