<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/RL2"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:id="@+id/TV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="45dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/PerfilRecolector"
                android:textColor="@color/colorBlanco"
                android:textSize="23sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_alignLeft="@id/TV1"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="356dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/Icono"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/SV1"
            android:layout_below="@+id/RL2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/RL1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="71dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    app:srcCompat="@drawable/perfil" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="71dp"
                    android:src="@drawable/estrella"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/imageView"/>



                <LinearLayout
                    android:id="@+id/LL38"
                    android:paddingTop="33dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_below="@+id/imageView3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Nombre"
                        android:padding="5dp"
                        android:textSize="25sp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Apellido"
                        android:padding="5dp"
                        android:textSize="25sp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sexo"
                        android:padding="5dp"
                        android:textSize="25sp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Correo"
                        android:padding="5dp"
                        android:textSize="25sp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Numero_pedidos"
                        android:padding="5dp"
                        android:textSize="25sp">
                    </TextView>
                </LinearLayout>

                <Button
                    android:layout_width="238dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/LL38"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="49dp"
                    android:layout_marginEnd="89dp"
                    android:text="@string/Home">

                </Button>


            </RelativeLayout>




        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>