<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterCode">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/padre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UselessParent">


                <TextView
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@android:drawable/sym_def_app_icon"
                    android:contentDescription="@string/todo" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="404dp"
                    android:layout_below="@id/top"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="325dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:background="#C0C0C0"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            style="@style/TextAppearance.Compat.Notification.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/recover_account"
                            android:textSize="30sp" />

                        <TextView
                            style="@style/TextAppearance.Compat.Notification.Title"
                            android:layout_width="246dp"
                            android:layout_height="62dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="23dp"
                            android:width="230dp"
                            android:text="@string/recuperar_cuenta"
                            android:textSize="16sp" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="25dp"
                            android:width="251dp"
                            android:inputType="textEmailAddress"
                            android:background="@android:color/white"
                            android:hint="@string/correo_electronico"
                            android:autofillHints="" />

                        <LinearLayout
                            android:layout_width="252dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">


                            <Button
                                android:id="@+id/e_c_cancelar"
                                android:layout_width="104dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="19dp"
                                android:text="@string/Cancelar"
                                android:textSize="13sp"
                                tools:ignore="ButtonStyle" />

                            <Button
                                android:id="@+id/e_c_enviar"
                                android:layout_width="108dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="45dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/enviar"
                                android:textSize="13sp"
                                tools:ignore="ButtonStyle" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:background="@android:color/darker_gray"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="683dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>