<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color"
        tools:ignore="MissingConstraints"
        android:id="@+id/RL0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RL1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TV1"
                android:background="@color/primaryColor"
                android:text="@string/RegistroUsuario"
                android:textSize="23dp"
                android:textColor="@color/colorBlanco"
                android:textAlignment="center"
                android:height="45dp" />


        </RelativeLayout>
        <ScrollView

            android:id="@+id/SV0"
            android:layout_below="@+id/RL1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/RL2">


                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="@string/Nombre"
                    android:padding="5dp"
                    android:inputType="text"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/efect_et2" />

                <EditText
                    android:id="@+id/etapellido"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/nombre"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="@string/Apellido"
                    android:padding="5dp"
                    android:inputType="text"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/efect_et2" />

                <EditText
                    android:id="@+id/etrut"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/etapellido"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="@string/Rut"
                    android:padding="5dp"
                    android:inputType="text"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/efect_et2" />

                <EditText
                    android:id="@+id/etcorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="@string/Correo"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/etrut"
                    android:padding="5dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/efect_et2" />
                <EditText
                    android:id="@+id/ettelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="@string/Teléfono"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/etcorreo"
                    android:padding="5dp"
                    android:inputType="number"
                    android:background="@drawable/efect_et2" />
                <EditText
                    android:id="@+id/calle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="@string/Callenum"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/ettelefono"
                    android:padding="5dp"
                    android:inputType="text"
                    android:background="@drawable/efect_et2"
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/comuna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="@string/Comuna"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/calle"
                    android:padding="5dp"
                    android:inputType="text"
                    android:background="@drawable/efect_et2" />



                <EditText
                    android:id="@+id/contraseña"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="contraseña"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/comuna"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:background="@drawable/efect_et2" />

                <EditText
                    android:id="@+id/repetirContraseña"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:width="225dp"
                    android:hint="Repetir Contraseña"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/contraseña"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:background="@drawable/efect_et2" />

                <LinearLayout
                    android:id="@+id/LL2botones"
                    android:layout_width="615dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/repetirContraseña"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-1dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="44dp"
                    android:paddingRight="@dimen/cardview_compat_inset_shadow">

                    <Button
                        android:id="@+id/cancelar"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="15dp"
                        android:width="100dp"
                        android:background="@color/colorBlanco"
                        android:padding="5dp"
                        android:paddingTop="22dp"
                        android:text="Cancelar"
                        android:textColor="@drawable/txt_bt2" />

                    <Button
                        android:id="@+id/crearRegistro"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="15dp"
                        android:width="100dp"
                        android:background="@color/colorBlanco"
                        android:padding="5dp"
                        android:text="Registrarse"
                        android:textColor="@drawable/txt_bt2" />


                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>